# graphics_braille

./: MANIFEST.in  README.md  __init__.py  pyproject.toml  z_show_square_loop_colors_braille.properties
.github/workflows/: graphics_braille.yml
Docs/: #module_cant_find_sister.py.txt  build_local_wheel.txt  graphics_braille_dependencies.txt  graphics_braille_import_to_run_exit.txt  graphics_braille_install_not_latest.txt  graphics_braille_install_test.txt  graphics_braille_run.txt  graphics_braille_test.txt  graphics_braille_test_run.txt  import graphics_braille.txt  missing_path_descriptions.txt  pypi_build_graphics_braille.txt  pypi_install_import_graphics_braille.txt  pypi_issues.txt  pypi_upload_test_graphics_braille_verbose.txt  run_test.txt.txt  wxpython_install_error.txt.txt  wxpython_install_error_fix.txt  x_show_square_without_and_with_hack.txt
src/graphics_braille/: add_src_dir.py  adw_menus.py  adw_perimeter.py  braille_cell.py  braille_cell_text.py  canvas_copy.py  crs_funs.py  grid_fill_gobble.py  hello_gb.py  java_properties.py  play_sound.py  pyttsx_proc.py  requirements.txt  s_show_square_loop_colors_w80_braille.py  select_report.py  select_trace.py  show_spokes_braille.py  show_square_loop_colors.py  show_square_loop_colors_braille.properties  show_square_loop_colors_braille.py  show_square_loop_colors_grid.py  show_square_loop_colors_w80.py  show_square_loop_colors_w80_braille.py  sinewave_numpy.py  speech_maker_cmd.py  tk_canvas_grid.py  wx_adw_display_pending.py  wx_adw_front_end.py  wx_adw_menus.py  wx_adw_scanner.py  wx_audio_beep.py  wx_audio_draw_window.properties  wx_audio_draw_window.py  wx_bg_rpc.py  wx_braille_cell_list.py  wx_braille_display.py  wx_canvas_grid.py  wx_canvas_panel.py  wx_canvas_panel_item.py  wx_display_main.properties  (+22 more)
tests/: show_square_loop_colors_braille.properties  x_show_square_loop_colors_braille.py
